# zwift_workouts_parser

./: .gitignore  LICENSE  README.md  TODO.txt  helper.py  interfaces.py  intervals.py  main.py  options.json  parse_helper.py  parsersettings.py  parsing.py  pyproject.toml  settings.json  setup.cfg  webhelper.py  workout.py  zparser.py  zwift_intervals.py  zwift_parser.py  zwift_workout.py
export/GCN Zero to Hero Plan/Week 1 Initial Testing/: 7-sat-or-sun-free-ride.zwo
export/Gran Fondo/Week 2/: 1-long-tempo-intervals.zwo
export/Mattias Thyr's Unstructured Workouts/: szrgwo-021.zwo
src/zwift_parser/: zwift_parser.py  zwift_workout.py
