[metadata]
name = zwift-workouts-parser 
version = 1.0.1
author = Alexander Shpuntenko
author_email = shpuntenko.a@gmail.com
description = A package that allows you to download workouts from https://whatsonzwift.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexshpunt/zwift_workouts_parser
project_urls =
    Bug Tracker = https://github.com/alexshpunt/zwift_workouts_parser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    beautifulsoup4
    certifi
    lxml

[options.packages.find]
where = src